changed margin/share rollout now visible, icons roll upwards onto actual media not offscreen/ position based on viewport % rather than fixed pixels

--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -148,6 +148,156 @@ footer
     box-sizing:border-box;
 }
 
+@media (min-width: 40.1em){
+
+ul{
+    position: fixed;
+    bottom: 5%;
+    left: 5%;
+    transform: translate(-50%,-50%);
+    margin: auto;
+    padding: 1%;
+    display: flex;
+    width: 60px;
+    height: 60px;
+    }
+    
+    ul:before {
+        content: '\f1e0';
+        font-family: Font Awesome\ 5 Free;
+        font-weight: 900;
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        background: url(https://cdn.shopify.com/s/files/1/0879/0542/products/pc1478_da4bcba9-c02d-40bd-88c6-8b32119d8933_1024x1024.jpg?v=1513990783);
+        border-radius: 30px;
+        text-align: center;
+        line-height: 60px;
+        color: #fff;
+        font-size: 30px;
+        margin: 0.2px;
+        transition: 0.5s;
+        z-index: 1;
+    }
+    
+    ul:hover::before
+    {
+        width: 60px;
+    }
+    ul li
+    {
+        position: absolute;
+        list-style: none;
+        transition: 1s;
+    }
+    
+    ul li a
+    {
+        display: block;
+        width: 60px;
+        height: 60px;
+        line-height: 60px;
+        text-align: center;
+        background: #262626;
+        color: #fff;
+        margin: 0.2px;
+        border-radius: 50%;
+        font-size: 30px;
+    }
+    
+    ul li:nth-child(1) a
+    {
+        background: #6e5494
+    }
+    ul li:nth-child(2) a
+    {
+        background: #3b5999
+    }
+    ul li:nth-child(3) a
+    {
+        background: #1769ff
+    }
+    ul li:nth-child(4) a
+    {
+        background: #0077B5
+    }
+    ul li:nth-child(5) a
+    {
+        background: #55acee
+    }
+    
+    ul li:nth-child(6) a
+    {
+        background: #25d366
+    }
+    ul li:nth-child(7) a
+    {
+        background: #ff8833
+    }
+    ul li:nth-child(8) a
+    {
+        background: #e4405f
+    }
+    ul li:nth-child(9) a
+    {
+        background: #bd081c
+    }
+    ul li:nth-child(10) a
+    {
+        background: #35465c
+    }
+    ul:hover li:nth-child(1) a
+    {
+        transform: translateX(64px) rotate(720deg);
+        transition: 1.1s;
+    }
+    ul:hover li:nth-child(2) a
+    {
+        transform: translateX(128px) rotate(720deg);
+        transition: 1.2s;
+    }
+    ul:hover li:nth-child(3) a
+    {
+        transform: translateX(192px) rotate(720deg);
+        transition: 1.3s;
+    }
+    ul:hover li:nth-child(4) a
+    {
+        transform: translateX(256px) rotate(720deg);
+        transition: 1.4s;
+    }
+    ul:hover li:nth-child(5) a
+    {
+        transform: translateX(320px) rotate(720deg);
+        transition: 1.5s;
+    }
+    ul:hover li:nth-child(6) a
+    {
+        transform: translateX(384px) rotate(720deg);
+        transition: 1.6s;
+    }
+    ul:hover li:nth-child(7) a
+    {
+        transform: translateX(448px) rotate(720deg);
+        transition: 1.7s;
+    }
+    ul:hover li:nth-child(8) a
+    {
+        transform: translateX(512px) rotate(720deg);
+        transition: 1.8s;
+    }
+    ul:hover li:nth-child(9) a
+    {
+        transform: translateX(576px) rotate(720deg);
+        transition: 1.9s;
+    }
+    ul:hover li:nth-child(10) a
+    {
+        transform: translateX(640px) rotate(720deg);
+        transition: 2.1s;
+    }
+}
+
 ul{
 position: fixed;
 bottom: 1%;
@@ -293,153 +443,4 @@ ul:hover li:nth-child(10) a
 {
     transform: translateY(640px) rotate(720deg);
     transition: 2.1s;
-}
-
-@media (min-width: 40.1em){
-ul{
-    position: fixed;
-    bottom: 1%;
-    left:50%;
-    transform: translate(-50%,-50%);
-    margin: 0;
-    padding: 0;
-    display: flex;
-    width: 640px;
-    height: 60px;
-    }
-    
-    ul:before {
-        content: '\f1e0';
-        font-family: Font Awesome\ 5 Free;
-        font-weight: 900;
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        background: url(https://cdn.shopify.com/s/files/1/0879/0542/products/pc1478_da4bcba9-c02d-40bd-88c6-8b32119d8933_1024x1024.jpg?v=1513990783);
-        border-radius: 30px;
-        text-align: center;
-        line-height: 60px;
-        color: #fff;
-        font-size: 30px;
-        margin: 0.2px;
-        transition: 0.5s;
-        z-index: 1;
-    }
-    
-    ul:hover::before
-    {
-        width: 60px;
-    }
-    ul li
-    {
-        position: absolute;
-        list-style: none;
-        transition: 1s;
-    }
-    
-    ul li a
-    {
-        display: block;
-        width: 60px;
-        height: 60px;
-        line-height: 60px;
-        text-align: center;
-        background: #262626;
-        color: #fff;
-        margin: 0.2px;
-        border-radius: 50%;
-        font-size: 30px;
-    }
-    
-    ul li:nth-child(1) a
-    {
-        background: #6e5494
-    }
-    ul li:nth-child(2) a
-    {
-        background: #3b5999
-    }
-    ul li:nth-child(3) a
-    {
-        background: #1769ff
-    }
-    ul li:nth-child(4) a
-    {
-        background: #0077B5
-    }
-    ul li:nth-child(5) a
-    {
-        background: #55acee
-    }
-    
-    ul li:nth-child(6) a
-    {
-        background: #25d366
-    }
-    ul li:nth-child(7) a
-    {
-        background: #ff8833
-    }
-    ul li:nth-child(8) a
-    {
-        background: #e4405f
-    }
-    ul li:nth-child(9) a
-    {
-        background: #bd081c
-    }
-    ul li:nth-child(10) a
-    {
-        background: #35465c
-    }
-    ul:hover li:nth-child(1) a
-    {
-        transform: translateX(64px) rotate(720deg);
-        transition: 1.1s;
-    }
-    ul:hover li:nth-child(2) a
-    {
-        transform: translateX(128px) rotate(720deg);
-        transition: 1.2s;
-    }
-    ul:hover li:nth-child(3) a
-    {
-        transform: translateX(192px) rotate(720deg);
-        transition: 1.3s;
-    }
-    ul:hover li:nth-child(4) a
-    {
-        transform: translateX(256px) rotate(720deg);
-        transition: 1.4s;
-    }
-    ul:hover li:nth-child(5) a
-    {
-        transform: translateX(320px) rotate(720deg);
-        transition: 1.5s;
-    }
-    ul:hover li:nth-child(6) a
-    {
-        transform: translateX(384px) rotate(720deg);
-        transition: 1.6s;
-    }
-    ul:hover li:nth-child(7) a
-    {
-        transform: translateX(448px) rotate(720deg);
-        transition: 1.7s;
-    }
-    ul:hover li:nth-child(8) a
-    {
-        transform: translateX(512px) rotate(720deg);
-        transition: 1.8s;
-    }
-    ul:hover li:nth-child(9) a
-    {
-        transform: translateX(576px) rotate(720deg);
-        transition: 1.9s;
-    }
-    ul:hover li:nth-child(10) a
-    {
-        transform: translateX(640px) rotate(720deg);
-        transition: 2.1s;
-    }
 }
